🚀 [Feature] : All message-text align left Fixes #473

--- a/src/app/components/pre-chat-box/pre-chat-box.component.scss
+++ b/src/app/components/pre-chat-box/pre-chat-box.component.scss
@@ -56,7 +56,7 @@ img {
   font-size: 12px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
   word-wrap: break-word;
-  text-align: right;
+  text-align: left;
 }
 
 .reply-text {
